--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,7 @@ uploads/
 node_modules/
 .package-lock.json
 package-lock.json
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
